Resolve #798. Allow modifying RenderTypes at runtime.